Token security handler + Error handling + Remove backend build script
