# packages/shared-models/src/user.model.ts
@@ -1,0 +1,9 @@
+export interface User {
+    id: number;
+    email: string;
+    password: string;
+    name: string;
+    role: UserRole;
+}
+
+export type UserRole = 'user' | 'admin';
